--- a/ProyectoPOS/css/styleformCancelar.css
+++ b/ProyectoPOS/css/styleformCancelar.css
@@ -12,6 +12,12 @@
     color: white;
     /* Cambia el color del texto de la marca */
 }
+
+.navbar-custom .nav-link:hover {
+    color: #ffc107; /* Cambia el color a dorado */
+    text-decoration: underline; /* Subrayado al pasar el cursor */
+}
+
 .navbar-custom img 
 { 
     width: 60px; 
@@ -20,6 +26,16 @@
 }
 span{
     font-size: xx-large;
+}
+
+#result{
+    font-size: 2rem;
+    color: #001c41;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    border-bottom: 3px solid #ffcc00; /* Línea debajo del título */
+    display: inline-block;
+    padding-bottom: 5px;
 }
 
 .contenido {
@@ -113,4 +129,13 @@ input:hover{
 
 .tres {
     grid-area: tres;
+}
+
+.piePagina p:hover{
+    text-decoration: underline;
+    text-decoration: none;
+    color: #ffcc00;
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+
 }
