--- a/ProyectoPOS/css/styleformRastrear.css
+++ b/ProyectoPOS/css/styleformRastrear.css
@@ -1,3 +1,7 @@
+.principal {
+    background-color: #f2f2f2;
+}
+
 .navbar-custom {
     background-color: #001c41;
     /* Cambia este color según tu preferencia */
@@ -9,10 +13,21 @@
     /* Cambia el color del texto de la marca */
 }
 
+#result{
+    font-size: 2rem;
+    color: #001c41;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    border-bottom: 3px solid #ffcc00; /* Línea debajo del título */
+    display: inline-block;
+    padding-bottom: 5px;
+}
+
 .navbar-custom .nav-link:hover {
     color: #ffc107; /* Cambia el color a dorado */
     text-decoration: underline; /* Subrayado al pasar el cursor */
 }
+
 .navbar-custom img 
 { 
     width: 60px; 
@@ -24,92 +39,82 @@ span{
 }
 
 
-.principal{
-    background-color: #f2f2f2;
+.contenido{
     display: grid;
-    grid-template-columns: 10% 50% 30% 10%;
-    grid-template-areas: "cabecera cabecera cabecera cabecera"
-                          "nada formulario comentarios nada1"
-                          "pie pie pie pie";
+    grid-template-columns: 20% 60% 20%;
+    grid-template-areas: "nada info nada1"
+                         "nada2 info1 nada3";
+
 
 }
 
-.cabecera{
-    grid-area: cabecera;
-}
-
-.formularioComentario{
-    background-color: white;
-    grid-area: formulario;
-    display: flex;
+.buscarEnvio{
+    grid-area: info;
     align-items: center;
     justify-content: center;
-}
-
-.comentariosClientes{
-    
+    justify-items: center;
     background-color: white;
-    grid-area: comentarios;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
+
 }
 
-.botonEnviar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-button{
-    width: 400px;
-    height: 50px;
+.buscarEnvio button{
+    width: 150px;
+    height: 35px;
     border: none;
-    background-color: #FFC107 ;
+    background-color: #FFC107;
 }
 
-button:hover{
+.buscarEnvio button:hover{
     background-color: #ff8000;
     color: white;
+}
+
+.formulario{
+    grid-area: info1;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    background-color: white;
+    
+}
+
+.formulario button{
+    border: none;
+    width: 150px;
+    height: 35px;
+    background-color: #FFC107;
 
 }
 
-.inputChico{
-    width: 400px;
-    height: 50px;
+.formulario button:hover{
+    background-color: #ff8000;
+    color: white;
+}
+
+.botonCentrar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+input{
+    width: 350px;
+    height: 35px;
     border: none;
 }
 
-.inputChico:hover{
-    background-color: #f2f2f2 ;
+input:hover{
+    background-color: #f2f2f2;
 }
-
-.inputGrande{
-    width: 600px;
-    height: 200px;
-    border: none;
-    resize: none;
-}
-
-.inputGrande:hover{
-    background-color: #f2f2f2 ;
-}
-
-
-
-
-
-
 
 .piePagina {
-    grid-area: pie;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-areas: "nades uno dos tres nades1";
     background-color: #001c41;
     color: white;
+    
 }
 
 .uno {
@@ -124,7 +129,6 @@ button:hover{
 .tres {
     grid-area: tres;
 }
-
 
 .piePagina p:hover{
     text-decoration: underline;
