--- a/ProyectoPOS/css/styleformModificar.css
+++ b/ProyectoPOS/css/styleformModificar.css
@@ -24,52 +24,14 @@
     height: auto; 
     margin-right: 10px; 
 }
+
+*{
+    font-family: 'Roboto', sans-serif;
+}
+
 span{
     font-size: xx-large;
 }
-
-
-.contenido{
-    display: grid;
-    grid-template-columns: 20% 60% 20%;
-    grid-template-areas: "nada info nada1"
-                         "nada2 info1 nada3";
-                         
-}
-
-.buscarEnvio{
-    grid-area: info;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    background-color: white;
-
-}
-
-.buscarEnvio button{
-    width: 150px;
-    height: 35px;
-    border: none;
-    background-color: #FFC107;
-}
-
-.buscarEnvio button:hover{
-    background-color: #ff8000;
-    color: white;
-}
-
-
-
-.formulario{
-    grid-area: info1;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    background-color: white;
-    
-    
-}
-
 
 #result{
     font-size: 2rem;
@@ -81,11 +43,61 @@ span{
     padding-bottom: 5px;
 }
 
+.contenido {
+
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-areas: "nadi contenido nadi1"
+                        "node contenido1 node1";
+    gap:30px;    
+
+}
+
+.buscarEnvio {
+    grid-area: contenido;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    background-color: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
+}
+
+.buscarEnvio button{
+
+    width: 150px;
+    height: 35px;
+    border: none;
+    background-color: #FFC107;
+}
+
+.buscarEnvio button:hover{
+    background-color: #ff8000;
+    color: white;
+}
+
+.formulario{
+    grid-area: contenido1;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    background-color: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
+}
+
 .formulario button{
     border: none;
     width: 150px;
     height: 35px;
     background-color: #FFC107;
+    color:black;
 
 }
 
@@ -105,19 +117,27 @@ input{
     width: 350px;
     height: 35px;
     border: none;
+    border-radius: 5px;
+    padding: 0 1px;
+    background-color: #f8f9fa;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    transition: background-color 0.2s ease-in-out;
 }
 
 input:hover{
     background-color: #f2f2f2;
 }
 
+
+
 .piePagina {
+    grid-area: pie;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-areas: "nades uno dos tres nades1";
     background-color: #001c41;
     color: white;
-    
 }
 
 .uno {
