--- a/ProyectoPOS/css/styleformCancelar.css
+++ b/ProyectoPOS/css/styleformCancelar.css
@@ -14,28 +14,35 @@
 }
 
 .navbar-custom .nav-link:hover {
-    color: #ffc107; /* Cambia el color a dorado */
-    text-decoration: underline; /* Subrayado al pasar el cursor */
+    color: #ffc107;
+    /* Cambia el color a dorado */
+    text-decoration: underline;
+    /* Subrayado al pasar el cursor */
 }
 
-.navbar-custom img 
-{ 
-    width: 60px; 
-    height: auto; 
-    margin-right: 10px; 
+.navbar-custom img {
+    width: 60px;
+    height: auto;
+    margin-right: 10px;
 }
-span{
+
+*{
+    font-family: 'Roboto', sans-serif;
+}
+
+span {
     font-size: xx-large;
 }
 
-#result{
+#result {
     font-size: 2rem;
     color: #001c41;
     margin-bottom: 15px;
     text-transform: uppercase;
-    border-bottom: 3px solid #ffcc00; /* Línea debajo del título */
+    border-bottom: 3px solid #ffcc00;
+    /* Línea debajo del título */
     display: inline-block;
-    padding-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 .contenido {
@@ -43,8 +50,9 @@ span{
     display: grid;
     grid-template-columns: 20% 60% 20%;
     grid-template-areas: "nadi contenido nadi1"
-                        "node contenido1 node1";
-    
+        "node contenido1 node1";
+    gap: 30px;
+
 
 }
 
@@ -54,55 +62,70 @@ span{
     justify-content: center;
     justify-items: center;
     background-color: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
 }
 
-.buscarEnvio button{
+.buscarEnvio button {
     width: 150px;
     height: 35px;
     border: none;
     background-color: #FFC107;
 }
 
-.buscarEnvio button:hover{
+.buscarEnvio button:hover {
     background-color: #ff8000;
     color: white;
 }
 
-.formulario{
+.formulario {
     grid-area: contenido1;
     align-items: center;
     justify-content: center;
     justify-items: center;
     background-color: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
 }
 
-.formulario button{
+.formulario button {
     border: none;
     width: 150px;
     height: 35px;
     background-color: #FFC107;
+    color: black;
 
 }
 
-.formulario button:hover{
+.formulario button:hover {
     background-color: #ff8000;
     color: white;
 }
 
-.botonCentrar{
+.botonCentrar {
     display: flex;
     align-items: center;
     justify-content: center;
     justify-items: center;
 }
 
-input{
+input {
     width: 350px;
     height: 35px;
     border: none;
+    border-radius: 5px;
+    padding: 0 1px;
+    background-color: #f8f9fa;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    transition: background-color 0.2s ease-in-out;
 }
 
-input:hover{
+input:hover {
     background-color: #f2f2f2;
 }
 
@@ -110,12 +133,12 @@ input:hover{
 
 
 .piePagina {
+    grid-area: pie;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-areas: "nades uno dos tres nades1";
     background-color: #001c41;
     color: white;
-   
 }
 
 .uno {
@@ -131,11 +154,11 @@ input:hover{
     grid-area: tres;
 }
 
-.piePagina p:hover{
+.piePagina p:hover {
     text-decoration: underline;
     text-decoration: none;
     color: #ffcc00;
     transform: scale(1.05);
-    transition: all 0.3s ease;
+    transition: all 0.3s ease;
 
 }
